YACC-BISSON JP/Ejemplo 4 - Validación de Tipos/obj/Validacion_Tipos.output
Estado 12 conflictos: 3 desplazamiento/reducción
Estado 13 conflictos: 3 desplazamiento/reducción
Estado 14 conflictos: 3 desplazamiento/reducción


Gramática

    0 $accept: input $end

    1 input: ε
    2      | input line

    3 line: '\n'
    4     | expresion '\n'

    5 expresion: NUMERO_ENTERO
    6          | NUMERO_REAL
    7          | expresion '+' expresion
    8          | expresion '-' expresion
    9          | expresion '*' expresion


Terminales con las reglas donde aparecen

    $end (0) 0
    '\n' (10) 3 4
    '*' (42) 9
    '+' (43) 7
    '-' (45) 8
    error <mystruct> (256)
    NUMERO_ENTERO <mystruct> (258) 5
    NUMERO_REAL <mystruct> (259) 6


No terminales con las reglas donde aparecen

    $accept (9)
        on left: 0
    input (10)
        on left: 1 2
        on right: 0 2
    line (11)
        on left: 3 4
        on right: 2
    expresion <mystruct> (12)
        on left: 5 6 7 8 9
        on right: 4 7 8 9


Estado 0

    0 $accept: • input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


Estado 1

    0 $accept: input • $end
    2 input: input • line

    $end           desplazar e ir al estado 2
    NUMERO_ENTERO  desplazar e ir al estado 3
    NUMERO_REAL    desplazar e ir al estado 4
    '\n'           desplazar e ir al estado 5

    line       ir al estado 6
    expresion  ir al estado 7


Estado 2

    0 $accept: input $end •

    $default  aceptar


Estado 3

    5 expresion: NUMERO_ENTERO •

    $default  reduce usando la regla 5 (expresion)


Estado 4

    6 expresion: NUMERO_REAL •

    $default  reduce usando la regla 6 (expresion)


Estado 5

    3 line: '\n' •

    $default  reduce usando la regla 3 (line)


Estado 6

    2 input: input line •

    $default  reduce usando la regla 2 (input)


Estado 7

    4 line: expresion • '\n'
    7 expresion: expresion • '+' expresion
    8          | expresion • '-' expresion
    9          | expresion • '*' expresion

    '\n'  desplazar e ir al estado 8
    '+'   desplazar e ir al estado 9
    '-'   desplazar e ir al estado 10
    '*'   desplazar e ir al estado 11


Estado 8

    4 line: expresion '\n' •

    $default  reduce usando la regla 4 (line)


Estado 9

    7 expresion: expresion '+' • expresion

    NUMERO_ENTERO  desplazar e ir al estado 3
    NUMERO_REAL    desplazar e ir al estado 4

    expresion  ir al estado 12


Estado 10

    8 expresion: expresion '-' • expresion

    NUMERO_ENTERO  desplazar e ir al estado 3
    NUMERO_REAL    desplazar e ir al estado 4

    expresion  ir al estado 13


Estado 11

    9 expresion: expresion '*' • expresion

    NUMERO_ENTERO  desplazar e ir al estado 3
    NUMERO_REAL    desplazar e ir al estado 4

    expresion  ir al estado 14


Estado 12

    7 expresion: expresion • '+' expresion
    7          | expresion '+' expresion •
    8          | expresion • '-' expresion
    9          | expresion • '*' expresion

    '+'  desplazar e ir al estado 9
    '-'  desplazar e ir al estado 10
    '*'  desplazar e ir al estado 11

    '+'       [reduce usando la regla 7 (expresion)]
    '-'       [reduce usando la regla 7 (expresion)]
    '*'       [reduce usando la regla 7 (expresion)]
    $default  reduce usando la regla 7 (expresion)


Estado 13

    7 expresion: expresion • '+' expresion
    8          | expresion • '-' expresion
    8          | expresion '-' expresion •
    9          | expresion • '*' expresion

    '+'  desplazar e ir al estado 9
    '-'  desplazar e ir al estado 10
    '*'  desplazar e ir al estado 11

    '+'       [reduce usando la regla 8 (expresion)]
    '-'       [reduce usando la regla 8 (expresion)]
    '*'       [reduce usando la regla 8 (expresion)]
    $default  reduce usando la regla 8 (expresion)


Estado 14

    7 expresion: expresion • '+' expresion
    8          | expresion • '-' expresion
    9          | expresion • '*' expresion
    9          | expresion '*' expresion •

    '+'  desplazar e ir al estado 9
    '-'  desplazar e ir al estado 10
    '*'  desplazar e ir al estado 11

    '+'       [reduce usando la regla 9 (expresion)]
    '-'       [reduce usando la regla 9 (expresion)]
    '*'       [reduce usando la regla 9 (expresion)]
    $default  reduce usando la regla 9 (expresion)
